--- a/arch/arm/boot/dts/imx6ull-beadapanel.dts
+++ b/arch/arm/boot/dts/imx6ull-beadapanel.dts
@@ -49,8 +49,8 @@
 	backlight {
 		compatible = "pwm-backlight";
 		pwms = <&pwm8 0 5000000>;
-		brightness-levels = <0 4 8 16 32 64 128 255>;
-		default-brightness-level = <6>;
+		brightness-levels = <0 2 4 6 8 12 16 20 26 32 42 52 64 84 104 128 160 200 255>;
+		default-brightness-level = <15>;
 		status = "okay";
 	};
 
