add support for hbc068 backlight board

--- a/arch/arm/boot/dts/Makefile
+++ b/arch/arm/boot/dts/Makefile
@@ -509,6 +509,7 @@ dtb-$(CONFIG_SOC_IMX6UL) += \
 	imx6ul-beadapanel-hbc05.dtb \
 	imx6ul-innostick6-hbc05-goodix.dtb \
 	imx6ul-beadapanel-hbc05-goodix.dtb \
+	imx6ul-beadapanel-hbc0686.dtb \
 	imx6ul-9x9-evk.dtb \
 	imx6ul-9x9-evk-btwifi.dtb \
 	imx6ul-9x9-evk-btwifi-oob.dtb \
@@ -545,6 +546,7 @@ dtb-$(CONFIG_SOC_IMX6ULL) += \
 	imx6ull-innostick6-hbc07b.dtb \
 	imx6ull-innostick6.dtb \
 	imx6ull-beadapanel.dtb \
+	imx6ull-beadapanel-hbc0686.dtb \
 	imx6ull-9x9-evk.dtb \
 	imx6ull-9x9-evk-btwifi.dtb \
 	imx6ull-9x9-evk-btwifi-oob.dtb \
